--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 
     <!-- element-ui -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/element-ui@2.14.0/lib/index.min.js"></script> -->
-    <script src="./static/js/element/index.min.js"></script>
+    <script src="./static/js/element/index.js"></script>
+
 
     <!-- vxe-table -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/xe-utils@3.2.1/dist/xe-utils.umd.min.js"></script>
