--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <link href="./static/js/element/index.css" rel="stylesheet">
 
     <!-- element-ui -->
-    <script src="https://cdn.jsdelivr.net/npm/element-ui@2.14.0/lib/index.min.js"></script>
-    <!-- <script src="./static/js/element/index.js"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/element-ui@2.14.0/lib/index.min.js"></script> -->
+    <script src="./static/js/element/index.js"></script>
 
 
     <!-- vxe-table -->
